--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,5 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <cache-path name="images" path="images/" />
     <cache-path name="expense_images" path="expense_images/" />
+    <cache-path name="exports" path="exports/" />
 </paths>
